# stats

./: .gitignore  README.md  pyproject.toml  things_to_do_on_live.md
stats/: api.py  auth.py  budget.py  constants.py  hooks.py  hr_utils.py  migrate.py  salary.py
stats/public/css/: stats.bundle.css
stats/public/js/: company.js  custom_logout.bundle.js  department.js  designation.js  employee.js  in_words.bundle.js  leave_allocation.js  leave_application.js  leave_type.js  material_request.js  payroll_entry.js  progress_bar.js  purchase_invoice.js  purchase_order.js  rejected_reason.js  todo.js  user-profile.js
stats/stats/custom/: account.json  additional_salary.json  attendance.json  attendance_request.json  company.json  country.json  department.json  designation.json  employee.json  employee_checkin.json  employee_education.json  employee_external_work_history.json  employee_grade.json  gender.json  journal_entry.json  leave_allocation.json  leave_application.json  leave_type.json  material_request.json  payroll_employee_detail.json  payroll_entry.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_receipt.json  purchase_receipt_item.json  salary_component.json  salary_structure.json  salary_structure_assignment.json  todo.json  user.json  workflow_transition.json
stats/stats/doctype/accounts_details_st/: accounts_details_st.json  accounts_details_st.py
stats/stats/doctype/case_status_st/: case_status_st.js  (+3 more)
stats/templates/: workflow_progressbar.html
stats/www/: redirect_to_portal_login.html  redirect_to_portal_login.py
(+940 files in other folders)
